<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit_local_planner</name>
  <version>0.0.1</version>
  <description>The pure_pursuit_local_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="unicornfarm@todo.todo">unicornfarm</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>cv_bridge</depend>

  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>


  <export><nav_core plugin="${prefix}/pure_pursuit_plugin.xml"/></export>

</package>
